--- a/src/locadora/FuncionarioJPanel.form
+++ b/src/locadora/FuncionarioJPanel.form
@@ -152,16 +152,13 @@
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Component id="nacionalidadejLabel4" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="usuariojTextField" min="-2" pref="116" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" attributes="0">
-                                  <Component id="nacionalidadejLabel5" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="senhajTextField" min="-2" pref="116" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="nacionalidadejLabel5" min="-2" max="-2" attributes="0"/>
+                              <Component id="nacionalidadejLabel4" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="usuariojTextField" pref="116" max="32767" attributes="0"/>
+                              <Component id="senhajPasswordField" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                       </Group>
@@ -258,7 +255,7 @@
                   <Component id="nacionalidadejLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cargojTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="nacionalidadejLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="senhajTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="senhajPasswordField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="33" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -455,11 +452,6 @@
         <Property name="text" type="java.lang.String" value="Usu&#xe1;rio:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="senhajTextField">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="senhajTextFieldActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JLabel" name="nacionalidadejLabel5">
       <Properties>
         <Property name="text" type="java.lang.String" value="Senha:"/>
@@ -484,6 +476,8 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="CC:"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JPasswordField" name="senhajPasswordField">
     </Component>
   </SubComponents>
 </Form>
